--- a/Pipfile
+++ b/Pipfile
@@ -31,7 +31,6 @@ openai = "*"
 pytest = "8.3.5"
 httpx = "0.28.1"
 pytest-cov = "5.0.0"
-pytest-asyncio = "0.25.3"
 bandit = "1.8.3"
 safety = "3.2.9"
 pre-commit = "4.3.0"
@@ -45,6 +44,7 @@ pytest-mock = "3.15.1"
 pylint-sqlalchemy = "*"
 pylint-pydantic = "*"
 lock = "*"
+pytest-asyncio = "*"
 
 [requires]
 python_version = "3.13"
